# ubertooth

./: .gitignore  .travis.yml  Dockerfile  Jenkinsfile  README  README.md  TRADEMARK  changelog  issue_template.md
.github/workflows/: build.yml
ci-scripts/: build-firmware.sh  configure-hubs.sh  test-firmware.sh  test-host.sh  test.sh
debian/: changelog  com.greatscottgadgets.ubertooth.metainfo.xml  control  copyright  gitlab-ci.yml  libubertooth-dev.install  libubertooth1.symbols  rules  ubertooth-firmware-source.install  ubertooth-firmware.install  ubertooth-firmware.lintian-overrides  ubertooth.docs  ubertooth.install  ubertooth.manpages  ubertooth.pc.in  watch
debian/man/: genmanpages.sh  ubertooth-btle.txt  ubertooth-debug.txt  ubertooth-dfu.txt  ubertooth-dump.txt  ubertooth-ego.txt  ubertooth-follow.txt  ubertooth-rx.txt  ubertooth-scan.txt  ubertooth-specan-ui.txt  ubertooth-specan.txt  ubertooth-tx.txt  ubertooth-util.txt
debian/patches/: 0006-Try-fixing-two-lintians.patch  01_fixpythoninstall.patch  02_fix_missing_dfu.patch  03_also_build_bootloader.patch  04_no_git_for_debian.patch  05_move_headers_to_subdir.patch  series
debian/patches_extra/: patch_include_source.patch
debian/source/: include-binaries
debian/tests/: buildfirmware  control
debian/upstream/: metadata
doc/: ubertooth-afh.1  ubertooth-afh.md  ubertooth-btle.1  ubertooth-btle.1.html  ubertooth-btle.md  ubertooth-dfu.1  ubertooth-dfu.md  ubertooth-dump.1  ubertooth-ego.1  ubertooth-ego.md  ubertooth-rx.1  ubertooth-rx.md  ubertooth-scan.1  ubertooth-scan.md  ubertooth-specan.md  ubertooth-util.1  ubertooth-util.md  ubertooth.7  ubertooth.7.html  ubertooth.md
docs/source/: Release_2015-10-R1.rst  Release_2017_03_R2.rst  Release_2018-08-R1.rst  Release_2018-12-R1.rst  assembling_hardware.rst  bluetooth_captures_PCAP.rst  build_guide.rst  building_from_git.rst  capturing_BLE_Wireshark.rst  capturing_BLE_scapy.rst  conf.py  faq.rst  firmware.rst  getting_help.rst  getting_started.rst  history.rst  index.rst  programming.rst  release_procedure.rst  software.rst  third_party_software.rst  to_do.rst  ubertooth_one.rst  ubertooth_projects_mentions.rst  ubertooth_two_wishlist.rst  ubertooth_zero.rst
firmware/: Makefile  README  README.txt  common.mk  ctags.mk
firmware/assembly_test/: Makefile  README  assembly_test.c
firmware/blinky/: Makefile  (+3 more)
hardware/: README  ubertooth-zero-bom.csv  ubertooth-zero.brd  ubertooth-zero.sch
host/: CMakeLists.txt  Makefile  README  README.cmake  README.cmake.md  README.md  btrx.py  ubertooth-dump.c  ubertooth.c
host/bluetooth_rxtx/: Makefile  README  README.btle  cc2400.c  cc2400.h  gpscript  test.c  ubertooth-btle.c  ubertooth-debug.c  ubertooth-dump.c  ubertooth-follow.c  ubertooth-hop.c  ubertooth-lap.c  ubertooth-reflash.c  ubertooth-rx.c  ubertooth-scan.c  ubertooth-specan.c  ubertooth-uap.c  ubertooth-util.c  ubertooth.c  ubertooth.h  ubertooth_control.c  ubertooth_control.h  ubertooth_interface.h
host/bluetooth_rxtx/python/: README  setup.py  test.c  ubertooth.c
host/bt_simple/: Makefile  README  demod.py  ubertooth-dump.c
host/cmake/: set_release.cmake
host/cmake/modules/: FindBLUETOOTH.cmake  FindBTBB.cmake  FindPCAP.cmake  FindPYTHON.cmake  FindUBERTOOTH.cmake  GetGitRevisionDescription.cmake.in
host/debian/: changelog  control  copyright  dirs  header-check.c  rules
host/doc/: CMakeLists.txt  ubertooth-btle.md  ubertooth-debug.md  ubertooth-dfu.md  ubertooth-dump.md  ubertooth-ego.md  ubertooth-rx.md  ubertooth-scan.md  ubertooth-specan.md  ubertooth-util.md  ubertooth.md
host/doc/man/: CMakeLists.txt  README.md  ubertooth-afh.1  ubertooth-btle.1  ubertooth-debug.1  ubertooth-dfu.1  ubertooth-ego.1  ubertooth-rx.1  ubertooth-scan.1  ubertooth-specan.1  ubertooth-util.1  ubertooth.7
host/kismet/: README
host/kismet/plugin-ubertooth/: Makefile  README  kismet_ubertooth.cc  packet_btbb.cc  packet_btbb.h  packetsource_ubertooth.cc  packetsource_ubertooth.h  tracker_btbb.cc  ubertooth_ui.cc
host/kismet/plugin-ubertooth-phyneutral/: Makefile  README  README.developers  kismet_ubertooth.cc  packet_btbb.cc  packet_btbb_types.cc  packetsource_ubertooth.cc  packetsource_ubertooth.h  phy_btbb.cc  phy_btbb.h  tracker_btbb.cc  tracker_btbb.h
host/libubertooth/: 40-ubertooth.rules  CMakeLists.txt
host/libubertooth/src/: CMakeLists.txt  ubertooth.c  ubertooth.h  ubertooth_callback.c  ubertooth_callback.h  ubertooth_control.c  ubertooth_control.h  ubertooth_fifo.c  ubertooth_fifo.h  ubertooth_interface.h  ubertooth_ringbuffer.c  ubertooth_ringbuffer.h  version.c.in  version.h  version.h.in
host/misc/udev/: 40-ubertooth.rules.in  CMakeLists.txt
host/packaging/: Portfile  ubertooth.rb
host/packaging/macports/ubertooth/: Portfile
host/packaging/macports/ubertooth/files/: patch-python3.diff
host/python/: CMakeLists.txt
host/python/extcap/: README  btle-extcap.py
host/python/specan_ui/: CMakeLists.txt  README  setup.py  setup.py.in  ubertooth-specan-ui
host/python/specan_ui/specan/: Ubertooth.py
host/python/ubtbr/: CMakeLists.txt  LICENSE  README.md  setup.py  setup.py.in  ubertooth-btbr
host/python/ubtbr/ubtbr/: btctl.py  lmp.py
host/python/usb_dfu/: CMakeLists.txt  Makefile  setup.py  setup.py.in  ubertooth-dfu
host/python/usb_dfu/dfu/: dfu.py
host/specan_ui/: Makefile  README  specan.py  specan_ui.py  ubertooth-specan-ui
host/specan_ui/specan/: Ubertooth.py
host/ubertooth-tools/: CMakeLists.txt
host/ubertooth-tools/getopt/: getopt.c
host/ubertooth-tools/src/: CMakeLists.txt  arglist.c  arglist.h  cc2400.c  cc2400.h  dfu.h  ubertooth-afh.c  ubertooth-btle.c  ubertooth-debug.c  ubertooth-dfu.c  ubertooth-ducky.c  ubertooth-dump.c  ubertooth-ego.c  ubertooth-follow.c  ubertooth-rx.c  ubertooth-scan.c  ubertooth-specan.c  ubertooth-tx.c  ubertooth-util.c
host/usb_dfu/: README  dfu.py  dfu_suffix.py  ubertooth-dfu  usb_dfu.py
host/usb_dfu/dfu/: dfu.py
tools/: RELEASENOTES  deploy-nightlies.sh  deploy-nightly.sh  ubertooth-release.sh  ubertooth-release.txt
web/: Makefile  README  Rules  config.yaml
(+223 files in other folders)
